# game-programming-course

./: .clang-format  .gitignore  CMakeLists.txt
projects/common/: _shader.h  camera.h  logger.cpp  logger.hpp  shader.cpp  shader.hpp  teapot_loader.h  type.hpp  utility.hpp
projects/week1/: CMakeLists.txt  main.cpp  shader.vert
projects/week1-copy/: CMakeLists.txt
projects/week10/: 70.1.particle_one shot of firework.cpp  70.2.particle_many shots of firework.cpp  CMakeLists.txt
projects/week10-hw/: CMakeLists.txt  main.cpp
projects/week11/: 50.4.normal_mapping.cpp  CMakeLists.txt
projects/week11-hw/: CMakeLists.txt  main.cpp
projects/week12/: 80.1.shadow_mapping.cpp  CMakeLists.txt
projects/week13/: CMakeLists.txt  main.cpp
projects/week2/: CMakeLists.txt  main.cpp  shader.frag  solarsystem_sun_2planets_hw.cpp
projects/week4/: CMakeLists.txt  main.cpp
projects/week5/: CMakeLists.txt  j11.quaternion.cpp
projects/week5-2/: CMakeLists.txt  j.shpere_phong_shading_2lights_cartoon.cpp
projects/week6-hw/: CMakeLists.txt  solarsystem_sun_2planets_hw.cpp
projects/week7/: AnimationState.h  CMakeLists.txt  j13.human.cpp  j13.human.h
resources/shaders/: 14.2.teapot.vs  50.4.normal_mapping.vs  60.3.teapot.fs  60.3.teapot.vs  70.1.particle.vs  80.1.shadow_mapping.fs  80.1.shadow_mapping.vs  j.sphere.fs  j.sphere.vs  j.sphere_2lights.fs  j.sphere_cartoon.fs  j11.cube.fs  j13.human.fs  shadow_mapping.fs  solarsystem_planet.fs  solarsystem_star.fs  solarsystem_star.vs
